# biosforge

./: .gitignore  LICENSE  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  setup_tools.py
biosforge/: __init__.py  cli.py
biosforge/core/: builder.py  cpuid_db.py  external_tools.py  flash_descriptor.py  me_parser.py  regions.py
biosforge/gui/: app.py
biosforge/vendors/: base.py  dell.py  hp.py  registry.py
