[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "biosforge"
version = "0.1.0"
description = "Open source UEFI/BIOS firmware reconstruction toolkit"
readme = "README.md"
license = {text = "BSD-2-Clause"}
requires-python = ">=3.10"
authors = [
    {name = "Lucas Gonzalez"},
]
keywords = ["bios", "uefi", "firmware", "spi", "flash", "me", "intel"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
]

[project.scripts]
biosforge = "biosforge.cli:main"
biosforge-gui = "biosforge.gui.app:main"
